# squirreljump

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.txt
assets/: animators.json
include/: audio-locator.h  audio.h  entity.h  input-controller.h  json.hpp  player.h  spritesheet-renderer.h
include/audio/: audio-intf.h  audio-locator.h  audio.h  null-audio.h
src/: audio-locator.cpp  audio.cpp  entity.cpp  input-controller.cpp  main.cpp  main.cpp~  player.cpp  spritesheet-renderer.cpp
src/audio/: audio-locator.cpp  audio.cpp  null-audio.cpp
